--- a/src/styles/mixins/slide-out-to.scss
+++ b/src/styles/mixins/slide-out-to.scss
@@ -7,19 +7,20 @@
 @mixin slide-out-to($slide-axis: x, $slide-offset: -100px, $animation-properties: 3s ease) {
   $slide-start: if($slide-axis == x, translateX(0), translateY(0));
   $slide-end: if($slide-axis == x, translateX($slide-offset), translateY($slide-offset));
-
-  @include keyframes(slide-out-#{$slide-axis}-#{$slide-offset}){
+  // gotta do this str-slice to prevent an invalid % char from getting into the string
+  $name: slide-out-#{$slide-axis}-#{str-slice(#{$slide-offset}, 0, str-length(#{$slide-offset}) - 1)};
+  @include keyframes($name) {
     0% {
-      @include opacity(1);
+      // @include opacity(1);
       @include transform($slide-start);
     }
     75% {
-      @include opacity(0);
+      // @include opacity(0);
     }
     100% {
       @include transform($slide-end);
     }
   }
-  @include animation(slide-out-#{$slide-axis}-#{$slide-offset} $animation-properties)
+  @include animation($name $animation-properties)
   // @include prefix(animation, slide-in-#{$slide-axis}-#{$slide-offset} $animation-properties, 'webkit');
 }
