added a dedicated close button for navDrawer; navbar and navdrawer mostly synced up now

--- a/src/components/nav/NavbarStyles.scss
+++ b/src/components/nav/NavbarStyles.scss
@@ -1,9 +1,10 @@
 @import '~styles/mixins/box-sizing';
-@import '~styles/mixins/children-appear-first-to-last';
 @import '~styles/mixins/container-std';
+@import '~styles/mixins/fade';
 @import '~styles/mixins/flexbox';
 @import '~styles/mixins/hide';
 @import '~styles/mixins/media-queries';
+@import '~styles/mixins/show';
 @import '~styles/mixins/slide-in-from';
 @import '~styles/mixins/slide-out-to';
 @import '~styles/mixins/transform';
@@ -80,7 +81,7 @@
 }
 
 .selectionIndicator {
-  @include transition(null, 50ms, all);
+  @include transition(50ms all);
   border-bottom: 0 solid rgb(80, 219, 126);
   bottom: 0;
   position: absolute;
@@ -138,8 +139,6 @@
   // @include transition(transform);
   @include for-phone-only {
     display: none;
-    // @include slide-out-to(x, 100%, '1s forwards ease');
-    // @include hide(0ms 1s forwards ease-out);
   }
   @include flexbox();
   height: 4rem;
@@ -148,10 +147,7 @@
   padding: 0;
   width: 100%;
 
-  & > * {
-    @include children-appear-first-to-last;
 
-  }
 }
 
 .navViewCompact {
@@ -169,5 +165,5 @@
 }
 
 .showNav {
-  @include slide-in-from(y, -4em, 200ms ease);
+  @include slide-in-from(y, -4em, 100ms ease);
 }
