--- a/src/components/nav/NavDrawerStyles.scss
+++ b/src/components/nav/NavDrawerStyles.scss
@@ -1,12 +1,55 @@
 @import '~styles/theme';
 @import '~styles/mixins/children-appear-last-to-first';
 @import '~styles/mixins/children-disappear-first-to-last';
+@import '~styles/mixins/fade';
 @import '~styles/mixins/flexbox';
 @import '~styles/mixins/media-queries';
 @import '~styles/mixins/position';
 @import '~styles/mixins/slide-out-to';
 @import '~styles/mixins/transition';
 @import '~styles/functions/z-index';
+@import '~sass-burger';
+
+.closeDrawerButton {
+  @include burger(2.5em, .4em, .3em, $eggshell, 1px);
+  @include burger-to-cross();
+}
+
+.closeDrawerButtonContainer {
+  @include position(fixed, 0, null, null, 0);
+  @include transition(750ms width);
+  display: none;
+  height: 100%;
+  width: 25%;
+  z-index: z-index(navDrawer) - 1;
+  @include for-tablet-portrait-up {
+    width: 25%
+  }
+  @include for-tablet-landscape-up {
+    width: 50%
+  }
+}
+
+.closeDrawerButtonPositioner {
+  background: $onyx;
+  border-radius: 50%;
+  height: 3.5em;
+  width: 3.5em;
+  @include flexbox;
+  @include justify-content(center);
+  @include align-items(center);
+  @include transition(750ms right);
+  @include for-phone-only {
+    display: none;
+  }
+  @include for-tablet-portrait-up {
+    @include fade(0, 1, 200ms 750ms both ease-in);
+    @include position(absolute, 50%, 10%, null, null);
+  }
+  // @include for-tablet-landscape-up {
+  //   @include position(absolute, 50%, 55%, null, null);
+  // }
+}
 
 // this element holds the same links displayed in the top navbar
 // and only displays them when the navbar goes into compact/mobile mode
@@ -30,17 +73,24 @@
   width: 90%;
   z-index: z-index(navDrawer);
   @include position(absolute, 0, -100%); //starts hidden
-  @include transition(null, 750ms, all);
+  @include transition((
+    750ms width,
+    250ms right
+    ));
+
   @include for-tablet-portrait-up {
     width: 75%;
   }
   @include for-tablet-landscape-up {
-    @include position(absolute, 0, -60%);
     width: 50%;
   }
 
   &.active {
     right: 0;
+
+    & .closeDrawerButtonContainer {
+      display: block;
+    }
   }
 
 }
@@ -69,7 +119,7 @@
   // @include flexbox;
   // @include flex-direction(column);
   // @include justify-content(space-evenly);
-  @include transition(null, 500ms, all);
+  @include transition(500ms all);
   transition-delay: 500ms;
   list-style: none;
   padding: 0;
