--- a/src/styles/mixins/_children-appear-last-to-first.scss
+++ b/src/styles/mixins/_children-appear-last-to-first.scss
@@ -15,9 +15,9 @@
       z-index: z-index(auto);
     }
   }
-  @for $idx from 0 to 25 {
+  @for $idx from 1 to 25 {
     & :nth-last-child(#{$idx}) {
-      @include animation(appear '200ms ease-out #{$idx * 220}ms both');
+      @include animation(appear '200ms ease-out #{($idx - 1) * 220}ms both');
     }
   }
 }
