--- a/src/styles/mixins/_transition.scss
+++ b/src/styles/mixins/_transition.scss
@@ -11,7 +11,8 @@
 ///     transition: all 0.3s ease-in;
 ///   }
 @import './prefix';
-
-@mixin transition($delay: 0ms, $duration: .5s, $prop: all, $time-fn: ease) {
-  @include prefix(transition, $delay $duration $prop $time-fn, 'webkit moz ms');
+// $delay: 0ms, $duration: .5s, $prop: all, $time-fn: ease
+// $delay $duration $prop $time-fn
+@mixin transition($values) {
+  @include prefix(transition, $values, 'webkit moz ms');
 }
