--- a/src/components/nav/NavbarStyles.scss
+++ b/src/components/nav/NavbarStyles.scss
@@ -23,6 +23,7 @@
   @include align-items(center);
   @include flexbox();
   @include justify-content(flex-end);
+  cursor: pointer;
   height: 100%;
   position: absolute;
   width: 100%;
