--- a/src/styles/Switcher.scss
+++ b/src/styles/Switcher.scss
@@ -2,12 +2,12 @@
 
 .switcher {
   position: relative;
-  /* margin: 0 10px; */
-  /* height: calc(100vh - 220px); */
-  /* overflow: hidden; */
-  /* -webkit-box-flex: 1;
-      -ms-flex: 1;
-          flex: 1; */
+  // margin: 0 10px;
+  // height: calc(100vh - 220px);
+  // overflow: hidden;
+  // -webkit-box-flex: 1;
+  //     -ms-flex: 1;
+  //         flex: 1;
 }
 
 /* @media (max-height: 700px) {
