--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -1,6 +1,18 @@
-$raisin: #231f20;
-$tomato: #BB4430;
-$topaz: #7EBDC2;
-$vanilla: #F3DFA2;
+$raisin: #273e47;
+$tomato: #bd632f;
+$topaz: #d8973c;
+$vanilla: #d8c99b;
 $eggshell: #EFE6DD;
+$deep-carmine: #a4243b;
 $onyx: #2d2f33;
+$primary1: #bd632f;
+$primary2: #273e47;
+// $primary3
+$accent1: #d8973c;
+$accent2: #d8c99b;
+// $accent3
+// $danger
+// $warn
+// $affirm
+// $negate
+// $neutral
