removed outline around focused input element in chrome

--- a/src/components/common/form/TextInputStyles.scss
+++ b/src/components/common/form/TextInputStyles.scss
@@ -40,6 +40,7 @@
       background: none;
       height: 3em;
       margin: .5em 0;
+      outline: none;
       padding-left: 1em;
       position: relative;
       width: 100%;
