set up (tons of) configuration for using Flow static typing; Typed checked <Paper />

--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -1,18 +1,19 @@
+// $accent3
+// $affirm
+// $danger
+// $negate
+// $primary3
+// $warn
+$accent1: #d8973c;
+$accent2: #d8c99b;
+$deep-carmine: #a4243b;
+$eggshell: #EFE6DD;
+$neutral: #918e8e;
+$onyx: #2d2f33;
+$primary1: #bd632f;
+$primary2: #273e47;
 $raisin: #273e47;
 $tomato: #bd632f;
 $topaz: #d8973c;
 $vanilla: #d8c99b;
-$eggshell: #EFE6DD;
-$deep-carmine: #a4243b;
-$onyx: #2d2f33;
-$primary1: #bd632f;
-$primary2: #273e47;
-// $primary3
-$accent1: #d8973c;
-$accent2: #d8c99b;
-// $accent3
-// $danger
-// $warn
-// $affirm
-// $negate
-$neutral: #918e8e;
+$white: #ffffff;
