--- a/src/components/SwitcherStyles.scss
+++ b/src/components/SwitcherStyles.scss
@@ -1,6 +1,6 @@
 .switcher {
   position: relative;
-  height: 100%;
+  // height: 100%;
   // margin: 0 10px;
   // height: calc(100vh - 220px);
   // overflow: hidden;
