--- a/src/components/pages/AppStyles.scss
+++ b/src/components/pages/AppStyles.scss
@@ -9,13 +9,17 @@ html {
   background-color: $eggshell;
   margin: 0;
   min-height: 700px;
-  height: 100%;
+  // height: 100%;
   z-index: z-index(default) - 1;
+
+  & * {
+    position: relative;
+  }
 }
 
 body {
 
-  height: 100%;
+  // height: 100%;
   margin: 0;
   min-height: 700px;
   @include box-sizing(border-box);
@@ -47,13 +51,13 @@ body {
   // display: flex;
   // flex: 1 0 auto;
   // flex-direction: column;
-  height: 100%;
+  // height: 100%;
   overflow-x: hidden;
   position: relative;
 }
 
 .appContainer_1 {
-  height: 100%;
+  // height: 100%;
   overflow: auto; // margin of inner contents overflows and ruins layout w/out this
   overflow-x: hidden;
 
@@ -61,7 +65,7 @@ body {
 }
 
 .appContainer_2 {
-  height: 100%;
+  // height: 100%;
 }
 
 
